--- a/http 완벽 가이드/11_클라이언트_식별과_쿠키.md
+++ b/http 완벽 가이드/11_클라이언트_식별과_쿠키.md
@@ -17,6 +17,42 @@
 
 ### 11.2 HTTP 헤더
 
+- `From`, `User-Agent`, `Referer` 등이 있지만 클라이언트를 확실하게 식별하기에는 다소 정보가 부족하다
+
+
+
+### 11.3 클라이언트 IP 주소
+
+- 정확히 사용자를 가리키는 게 아닌 사용하는 컴퓨터를 가리킨다. 
+  - 같은 컴퓨터로 다른 사용자가 로그인한 것을 인식하지 못한다.
+- ISP는 동적 IP 주소를 할당한다.
+- 보안을 강화하고 부족한 주소들을 관리하려고 많은 사용자가 네트워크 주소 변환(Network Address Translation, NAT) 방화벽을 통해 인터넷을 사용한다. NAT 장비들은 클라이언트의 실제 IP 주소를 내부에서 사용하는 하나의 방화벽 IP 주소(그리고 다른 포트번호)로 변환한다.
+
+### 11.4 사용자 로그인
+
+### 11.5 Fat Url
+
+- url이 못 생겼다.
+- 캐시를 사용할 수 없다.
+- 정확한 url를 사용하지 않는다면 도달하지 못한다.
+
+### 11.6 쿠키(cookie)
+
+- 사용자를 식별하고 세션 유지를 위한 방식 중 현재까지 가장 널리 사용되고 있는 방식
+- 쿠키는 캐시와 충돌할 수 이썽서, 대부분의 캐시나 브라우저는 쿠키에 있는 내용물을 캐시하지 않는다.
+
+#### 11.6.1 쿠키의 타입
+
+- session cookie
+  - 사용자가 사이트 탐색할 때, 관련 설정과 선호 사항들을 저장하는 임시 쿠키
+  - 브라우저 닫으면 삭제
+- persistent cookie
+  - 디스크에 저장
+    - 브라우저를 닫거나 컴퓨터를 재시작해도 유지된다.
+- 위 두 쿠키의 차이점은 파기 시점뿐
+  - Expires or Max-Age (O) => persistent cookie
+  - Expires or Max-Age (X) =>  session cookie
+
 
 
 
