사내 세미나 자료 추가

--- a/리액트_면접_질문 .md
+++ b/리액트_면접_질문 .md
@@ -9,7 +9,7 @@
 
 
 
-### 1. 리액트(React)란 무엇입니까?
+### q1. 리액트(React)란 무엇입니까?
 
 ​	리액트는 UI를 구성하기 위해 사용되는 자바스크립트 오픈소스 라이브러리 입니다. 특히, Single Page Application로 구성되어 있는 프로젝트에서 자주 사용됩니다. 웹과 모바일에서 view 계층을 다루기 위해 사용됩니다.
 
